# bot-sense-network

./: ENVIRONMENT_CONFIG.md  Error.csv  README-robot-client.md  README.md  SecurityIssue.csv  Supabase Performance Security Lints (uwmbdporlrduzthgdmcg).csv  Supabase Snippet Create First Admin User.csv  index.html  package-lock.json  package.json  robot-client.js  robot-simulator.js  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
scripts/: robot-simulator.js
src/: App.css  App.tsx  index.css  vite-env.d.ts
src/components/: SubscriptionManager.tsx  theme-provider.tsx
src/context/: AuthContext.tsx  CartContext.tsx  SubscriptionContext.tsx  ThemeContext.tsx
src/data/: pricingData.ts
src/hooks/: use-mobile.tsx  useDebounce.ts  useRobotDetails.ts  useRobots.tsx  useTelemetryHistory.ts
src/pages/: About.tsx  AdminDashboard.tsx  Alerts.tsx  ApiDocs.tsx  Auth.tsx  Blog.tsx  CheckoutCancel.tsx  CheckoutPage.tsx  CheckoutSuccess.tsx  CheckoutSuccessPage.tsx  Contact.tsx  Features.tsx  FleetStatus.tsx  FleetStatusPage.tsx  Index.tsx  IntegrationGuide.tsx  Landing.tsx  MapViewPage.tsx  Pricing.tsx  ProfilePage.tsx  RobotDetails.tsx  Status.tsx  SubscriptionManage.tsx  SubscriptionPage.tsx  SubscriptionSuccess.tsx
src/services/: robotService.ts
src/store/: robotStore.ts
src/types/: robot.ts  supabase.ts
src/utils/: planRestrictions.ts  robotMapper.ts  stripeCheckout.ts
src/utils/ros_bridge/: README.md  package.xml  requirements.txt  robometrics_bridge.py  setup.py
src/utils/ros_bridge/launch/: robometrics_bridge.launch
src/utils/ros_bridge/launch_ros2/: robometrics_bridge.launch.py
src/utils/ros_bridge/msg/: RobometricsMessage.msg
supabase/: config.toml  migration.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240321000000_add_admin_role.sql  20250510192000_schema_from_prod.sql  20250510194500_resync_prod.sql  20250523001201_init.sql  20250523001206_init.sql  Latest.sql  (+7 more)
(+94 files in other folders)
