
<?xml version="1.0"?>
<package format="3">
  <name>robometrics_bridge</name>
  <version>0.1.0</version>
  <description>RoboMonitor integration for ROS robots</description>

  <maintainer email="support@robometrics.xyz">RoboMonitor Team</maintainer>
  <license>MIT</license>
  
  <!-- Support both ROS1 and ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_python</buildtool_depend>
  
  <!-- Common dependencies -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- For ROS2 -->
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
